--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
+    "express": "^4.18.2",
     "next": "13.4.5",
     "postcss": "8.4.24",
     "react": "18.2.0",
@@ -22,5 +23,11 @@
     "sass": "^1.63.4",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.17",
+    "cross-env": "^7.0.3",
+    "nodemon": "^2.0.22",
+    "ts-node": "^10.9.1"
   }
 }
