--- a/package.json
+++ b/package.json
@@ -11,14 +11,20 @@
     "lint": "npx next lint"
   },
   "dependencies": {
-    "@types/node": "20.3.1",
+    "@types/node": "^20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
     "autoprefixer": "10.4.14",
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.1.4",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
-    "express": "^4.18.2",
+    "express": "github:expressjs/express#5.0",
+    "express-session": "^1.17.3",
+    "http-errors": "^2.0.0",
+    "method-override": "^3.0.0",
     "next": "13.4.5",
+    "passport": "^0.6.0",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -28,6 +34,9 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/express-session": "^1.17.7",
+    "@types/http-errors": "^2.0.1",
+    "@types/passport": "^1.0.12",
     "cross-env": "^7.0.3",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1"
