--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/express": "^4.17.17",
     "@types/express-session": "^1.17.7",
     "@types/http-errors": "^2.0.1",
+    "@types/method-override": "^0.0.32",
     "@types/passport": "^1.0.12",
     "cross-env": "^7.0.3",
     "nodemon": "^2.0.22",
