➕ Install html-eslint
Also using 4 space indentation by default.
NB: to enable linting of html files in WebStorm see
https://stackoverflow.com/questions/65529204/display-es-lint-html-errors-in-intellij-webstorm
For VSCode, see
https://yeonjuan.github.io/html-eslint/docs/getting-started/

Signed-off-by: tameTNT <30503695+tameTNT@users.noreply.github.com>

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,5 +4,16 @@
     "semi": ["warn", "always"],
     "indent": ["error", 2],
     "quotes": ["warn", "double", { "avoidEscape": true }]
-  }
+  },
+  "plugins": ["@html-eslint"],
+  "overrides": [
+    {
+      "files": ["*.html"],
+      "parser": "@html-eslint/parser",
+      "extends": ["plugin:@html-eslint/recommended"],
+      "rules": {
+        "@html-eslint/indent": ["warn", 4]
+      }
+    }
+  ]
 }
