--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "autoprefixer": "10.4.14",
     "body-parser": "^1.20.2",
     "dotenv": "^16.1.4",
-    "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
     "express": "github:expressjs/express#5.0",
     "express-session": "^1.17.3",
@@ -36,12 +35,15 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
+    "@html-eslint/eslint-plugin": "^0.19.0",
+    "@html-eslint/parser": "^0.19.0",
     "@types/express": "^4.17.17",
     "@types/express-session": "^1.17.7",
     "@types/http-errors": "^2.0.1",
     "@types/method-override": "^0.0.32",
     "@types/passport": "^1.0.12",
     "cross-env": "^7.0.3",
+    "eslint": "^8.42.0",
     "eslint-plugin-tsdoc": "^0.2.17",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1"
