--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,7 @@
   "extends": "next/core-web-vitals",
   "rules": {
     "semi": ["warn", "always"],
-    "indent": ["error", 2],
+    "indent": ["warn", 2],
     "quotes": ["warn", "double", { "avoidEscape": true }]
   },
   "plugins": ["@html-eslint"],
@@ -12,7 +12,7 @@
       "parser": "@html-eslint/parser",
       "extends": ["plugin:@html-eslint/recommended"],
       "rules": {
-        "@html-eslint/indent": ["warn", 4]
+        "@html-eslint/indent": ["warn", 2]
       }
     }
   ]
