--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "dotenv": "^16.1.4",
     "eslint-config-next": "13.4.5",
     "express": "github:expressjs/express#5.0",
+    "express-mysql-session": "^3.0.0",
     "express-session": "^1.17.3",
     "http-errors": "^2.0.0",
     "method-override": "^3.0.0",
+    "mysql2": "^3.3.5",
     "next": "13.4.5",
     "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
