--- a/package.json
+++ b/package.json
@@ -41,10 +41,12 @@
     "@html-eslint/eslint-plugin": "^0.19.0",
     "@html-eslint/parser": "^0.19.0",
     "@types/express": "^4.17.17",
+    "@types/express-mysql-session": "^2.1.3",
     "@types/express-session": "^1.17.7",
     "@types/http-errors": "^2.0.1",
     "@types/method-override": "^0.0.32",
     "@types/passport": "^1.0.12",
+    "@types/passport-local": "^1.0.35",
     "cross-env": "^7.0.3",
     "eslint": "^8.42.0",
     "eslint-plugin-tsdoc": "^0.2.17",
