--- a/package.json
+++ b/package.json
@@ -1,51 +1,52 @@
 {
-  "name": "durhack-megateams-server",
-  "version": "0.1.0",
-  "private": true,
-  "repository": {
-    "url": "https://github.com/ducompsoc/durhack-megateams"
-  },
-  "scripts": {
-    "dev": "npx nodemon",
-    "build:client": "npx next build",
-    "build:server": "npx tsc -p tsconfig.server.json",
-    "build": "npm run build:client && npm run build:server",
-    "start": "npx cross-env NODE_ENV=production node dist/main.js",
-    "lint": "npx next lint"
-  },
-  "dependencies": {
-    "@types/node": "^20.3.1",
-    "@types/react": "18.2.12",
-    "@types/react-dom": "18.2.5",
-    "autoprefixer": "10.4.14",
-    "body-parser": "^1.20.2",
-    "dotenv": "^16.1.4",
-    "eslint-config-next": "13.4.5",
-    "express": "github:expressjs/express#5.0",
-    "express-session": "^1.17.3",
-    "http-errors": "^2.0.0",
-    "method-override": "^3.0.0",
-    "next": "13.4.5",
-    "passport": "^0.6.0",
-    "postcss": "8.4.24",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "sass": "^1.63.4",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.1.3"
-  },
-  "devDependencies": {
-    "@html-eslint/eslint-plugin": "^0.19.0",
-    "@html-eslint/parser": "^0.19.0",
-    "@types/express": "^4.17.17",
-    "@types/express-session": "^1.17.7",
-    "@types/http-errors": "^2.0.1",
-    "@types/method-override": "^0.0.32",
-    "@types/passport": "^1.0.12",
-    "cross-env": "^7.0.3",
-    "eslint": "^8.42.0",
-    "eslint-plugin-tsdoc": "^0.2.17",
-    "nodemon": "^2.0.22",
-    "ts-node": "^10.9.1"
-  }
+	"name": "durhack-megateams-server",
+	"version": "0.1.0",
+	"private": true,
+	"repository": {
+		"url": "https://github.com/ducompsoc/durhack-megateams"
+	},
+	"scripts": {
+		"dev": "npx nodemon",
+		"build:client": "npx next build",
+		"build:server": "npx tsc -p tsconfig.server.json",
+		"build": "npm run build:client && npm run build:server",
+		"start": "npx cross-env NODE_ENV=production node dist/main.js",
+		"lint": "npx next lint"
+	},
+	"dependencies": {
+		"@types/node": "^20.3.1",
+		"@types/react": "18.2.12",
+		"@types/react-dom": "18.2.5",
+		"autoprefixer": "10.4.14",
+		"body-parser": "^1.20.2",
+		"dotenv": "^16.1.4",
+		"eslint-config-next": "13.4.5",
+		"express": "github:expressjs/express#5.0",
+		"express-session": "^1.17.3",
+		"http-errors": "^2.0.0",
+		"method-override": "^3.0.0",
+		"mysql2": "^3.4.0",
+		"next": "13.4.5",
+		"passport": "^0.6.0",
+		"postcss": "8.4.24",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"sass": "^1.63.4",
+		"tailwindcss": "3.3.2",
+		"typescript": "5.1.3"
+	},
+	"devDependencies": {
+		"@html-eslint/eslint-plugin": "^0.19.0",
+		"@html-eslint/parser": "^0.19.0",
+		"@types/express": "^4.17.17",
+		"@types/express-session": "^1.17.7",
+		"@types/http-errors": "^2.0.1",
+		"@types/method-override": "^0.0.32",
+		"@types/passport": "^1.0.12",
+		"cross-env": "^7.0.3",
+		"eslint": "^8.42.0",
+		"eslint-plugin-tsdoc": "^0.2.17",
+		"nodemon": "^2.0.22",
+		"ts-node": "^10.9.1"
+	}
 }
