--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint": "npx next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
     "@types/node": "^20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
