--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "email-validator": "^2.0.4",
+    "chart.js": "^4.3.0",
+    "chartjs-plugin-annotation": "^3.0.1",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "eslint-config-next": "13.4.5",
     "express": "github:expressjs/express#5.0",
     "express-mysql-session": "^3.0.0",
@@ -34,6 +37,7 @@
     "passport-local": "^1.0.0",
     "postcss": "8.4.24",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "reflect-metadata": "^0.1.13",
     "sass": "^1.63.4",
