--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "devDependencies": {
     "@html-eslint/eslint-plugin": "^0.19.0",
     "@html-eslint/parser": "^0.19.0",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
     "@types/express-mysql-session": "^2.1.3",
     "@types/express-session": "^1.17.7",
