--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "dev": "npx nodemon",
     "build:client": "npx next build",
-    "build:server": "npx tsc -p tsconfig.server.json",
+    "build:server": "npx tsc -p tsconfig.server.json && npx tsc-alias -p tsconfig.server.json",
     "build": "npm run build:client && npm run build:server",
     "start": "npx cross-env NODE_ENV=production node dist/main.js",
     "lint": "npx next lint"
@@ -32,6 +32,7 @@
     "react-dom": "18.2.0",
     "sass": "^1.63.4",
     "tailwindcss": "3.3.2",
+    "tsc-alias": "^1.8.6",
     "typescript": "5.1.3"
   },
   "devDependencies": {
