--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "@tailwindcss/forms": "^0.5.3",
     "@types/node": "^20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
