--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "reflect-metadata": "^0.1.13",
+    "react-qr-code": "^2.0.11",
     "sass": "^1.63.4",
     "sequelize": "^6.32.1",
     "sequelize-typescript": "^2.1.5",
