--- a/package.json
+++ b/package.json
@@ -34,7 +34,10 @@
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "reflect-metadata": "^0.1.13",
     "sass": "^1.63.4",
+    "sequelize": "^6.32.1",
+    "sequelize-typescript": "^2.1.5",
     "tailwindcss": "3.3.2",
     "tsc-alias": "^1.8.6",
     "typescript": "5.1.3"
@@ -49,6 +52,7 @@
     "@types/method-override": "^0.0.32",
     "@types/passport": "^1.0.12",
     "@types/passport-local": "^1.0.35",
+    "@types/validator": "^13.7.17",
     "cross-env": "^7.0.3",
     "eslint": "^8.42.0",
     "eslint-plugin-tsdoc": "^0.2.17",
