--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -1,10 +1,12 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "module": "commonjs",
+    "module": "es2022",
     "outDir": "dist",
-    "lib": ["es2019"],
+    "lib": ["es2021"],
     "target": "es2019",
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "isolatedModules": false,
     "noEmit": false,
     "paths": {
