--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "durhack-megateams-server",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "repository": {
     "url": "https://github.com/ducompsoc/durhack-megateams"
   },
@@ -57,7 +58,6 @@
     "eslint": "^8.42.0",
     "eslint-plugin-tsdoc": "^0.2.17",
     "nodemon": "^2.0.22",
-    "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.2.0"
+    "tsx": "^3.12.7"
   }
 }
