--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -12,8 +12,8 @@
     "moduleResolution": "node",
     "noEmit": false,
     "paths": {
-      "@/server/*": ["*"]
+      "@server/*": ["src/server/*"]
     }
   },
-  "include": ["src/server"]
+  "include": ["src/server/**/*.ts"]
 }
