:bug: fix WebStorm not recognising pathing

--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -12,7 +12,7 @@
     "moduleResolution": "node",
     "noEmit": false,
     "paths": {
-      "@server/*": ["src/server/*"]
+      "@server/*": ["./src/server/*"]
     }
   },
   "include": ["src/server/**/*.ts"]
