--- a/package.json
+++ b/package.json
@@ -17,16 +17,18 @@
     "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.0.18",
     "@tailwindcss/forms": "^0.5.3",
+    "@types/dateformat": "^5.0.0",
     "@types/node": "^20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
     "autoprefixer": "10.4.14",
     "body-parser": "^1.20.2",
-    "dotenv": "^16.3.1",
-    "email-validator": "^2.0.4",
     "chart.js": "^4.3.0",
     "chartjs-plugin-annotation": "^3.0.1",
     "chartjs-plugin-datalabels": "^2.2.0",
+    "dateformat": "^5.0.3",
+    "dotenv": "^16.3.1",
+    "email-validator": "^2.0.4",
     "eslint-config-next": "13.4.5",
     "express": "github:expressjs/express#5.0",
     "express-mysql-session": "^3.0.0",
@@ -43,8 +45,8 @@
     "react-chartjs-2": "^5.2.0",
     "react-component-export-image": "^1.0.6",
     "react-dom": "18.2.0",
-    "reflect-metadata": "^0.1.13",
     "react-qr-code": "^2.0.11",
+    "reflect-metadata": "^0.1.13",
     "sass": "^1.63.4",
     "sequelize": "^6.32.1",
     "sequelize-typescript": "^2.1.5",
