--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-component-export-image": "^1.0.6",
     "react-dom": "18.2.0",
     "react-qr-code": "^2.0.11",
+    "react-select": "^5.7.4",
     "reflect-metadata": "^0.1.13",
     "sass": "^1.63.4",
     "sequelize": "^6.32.1",
