--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint": "npx next lint"
   },
   "dependencies": {
+    "@formkit/auto-animate": "^0.7.0",
     "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.0.18",
     "@tailwindcss/forms": "^0.5.3",
