--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "eslint": "^8.42.0",
     "eslint-plugin-tsdoc": "^0.2.17",
     "nodemon": "^2.0.22",
+    "tailwindcss-bg-patterns": "^0.2.0",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0"
   }
