--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "tailwindcss": "3.3.2",
     "tsc-alias": "^1.8.6",
     "typescript": "5.1.3",
-    "zod": "^3.22.1"
+    "zod": "^3.22.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@html-eslint/eslint-plugin": "^0.19.0",
@@ -70,6 +71,7 @@
     "@types/method-override": "^0.0.32",
     "@types/passport": "^1.0.12",
     "@types/passport-local": "^1.0.35",
+    "@types/uuid": "^9.0.2",
     "@types/validator": "^13.7.17",
     "cross-env": "^7.0.3",
     "eslint": "^8.42.0",
