--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "sequelize-typescript": "^2.1.5",
     "tailwindcss": "3.3.2",
     "tsc-alias": "^1.8.6",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "zod": "^3.22.1"
   },
   "devDependencies": {
     "@html-eslint/eslint-plugin": "^0.19.0",
