--- a/package.json
+++ b/package.json
@@ -58,8 +58,9 @@
     "tailwindcss": "3.3.2",
     "tsc-alias": "^1.8.6",
     "typescript": "5.1.3",
-    "zod": "^3.22.1",
-    "uuid": "^9.0.0"
+    "unique-names-generator": "^4.7.1",
+    "uuid": "^9.0.0",
+    "zod": "^3.22.1"
   },
   "devDependencies": {
     "@html-eslint/eslint-plugin": "^0.19.0",
