--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "sass": "^1.63.4",
     "sequelize": "^6.32.1",
     "sequelize-typescript": "^2.1.5",
+    "swr": "^2.2.2",
     "tailwindcss": "3.3.2",
     "tsc-alias": "^1.8.6",
     "typescript": "5.1.3",
