--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-component-export-image": "^1.0.6",
     "react-dom": "18.2.0",
     "react-qr-code": "^2.0.11",
+    "react-responsive": "^9.0.2",
     "react-select": "^5.7.4",
     "reflect-metadata": "^0.1.13",
     "sass": "^1.63.4",
