--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,5 +1,4 @@
 {
-  "extends": "./tsconfig.json",
   "compilerOptions": {
     "module": "commonjs",
     "outDir": "dist",
@@ -12,7 +11,7 @@
     "moduleResolution": "node",
     "noEmit": false,
     "paths": {
-      "@server/*": ["./*"]
+      "@server/*": ["./src/*"]
     }
   },
   "include": ["src/server/**/*.ts"]
