--- a/client/package.json
+++ b/client/package.json
@@ -1,17 +1,27 @@
 {
   "name": "durhack-megateams-server",
+  "description": "Client app for the DurHack Megateams project",
   "version": "0.1.0",
   "private": true,
+  "author": {
+    "name": "Durham University Computing Society",
+    "email": "computingsociety@durham.ac.uk",
+    "url": "https://compsoc.tech/"
+  },
+  "contributors": [
+    "Joe Clack <durhack@joeclack.me.uk>",
+    "Jacob Wrenn <jacob.w@durhack.com>",
+    "Amber G <amber.g@durhack.com>",
+    "Luca Huelle <lucahuelle@gmail.com>"
+  ],
   "repository": {
     "url": "https://github.com/ducompsoc/durhack-megateams"
   },
   "scripts": {
-    "dev": "npx nodemon",
-    "build:client": "npx next build",
-    "build:server": "npx tsc -p tsconfig.server.json && npx tsc-alias -p tsconfig.server.json",
-    "build": "npm run build:client && npm run build:server",
-    "start": "npx cross-env NODE_ENV=production node --experimental-specifier-resolution=node dist/main.js",
-    "lint": "npx next lint"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "@formkit/auto-animate": "^0.7.0",
@@ -23,25 +33,12 @@
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
     "autoprefixer": "10.4.14",
-    "body-parser": "^1.20.2",
     "chart.js": "^4.3.0",
     "chartjs-plugin-annotation": "^3.0.1",
     "chartjs-plugin-datalabels": "^2.2.0",
-    "cookie-parser": "^1.4.6",
-    "csrf-csrf": "^2.3.0",
     "dateformat": "^5.0.3",
-    "dotenv": "^16.3.1",
-    "email-validator": "^2.0.4",
     "eslint-config-next": "13.4.5",
-    "express": "github:expressjs/express#5.0",
-    "express-mysql-session": "^3.0.0",
-    "express-session": "^1.17.3",
-    "http-errors": "^2.0.0",
-    "method-override": "^3.0.0",
-    "mysql2": "^3.4.2",
     "next": "13.4.5",
-    "passport": "^0.6.0",
-    "passport-local": "^1.0.0",
     "postcss": "8.4.24",
     "qrcode-scanner-react": "^0.2.2",
     "react": "18.2.0",
@@ -53,35 +50,15 @@
     "react-select": "^5.7.4",
     "reflect-metadata": "^0.1.13",
     "sass": "^1.63.4",
-    "sequelize": "^6.32.1",
-    "sequelize-typescript": "^2.1.5",
     "swr": "^2.2.2",
     "tailwindcss": "3.3.2",
-    "tsc-alias": "^1.8.6",
-    "typescript": "5.1.3",
-    "unique-names-generator": "^4.7.1",
-    "uuid": "^9.0.0",
-    "zod": "^3.22.1"
+    "typescript": "5.1.3"
   },
   "devDependencies": {
     "@html-eslint/eslint-plugin": "^0.19.0",
     "@html-eslint/parser": "^0.19.0",
-    "@types/cookie-parser": "^1.4.3",
-    "@types/express": "^4.17.17",
-    "@types/express-mysql-session": "^2.1.3",
-    "@types/express-session": "^1.17.7",
-    "@types/http-errors": "^2.0.1",
-    "@types/method-override": "^0.0.32",
-    "@types/passport": "^1.0.12",
-    "@types/passport-local": "^1.0.35",
-    "@types/uuid": "^9.0.3",
-    "@types/validator": "^13.7.17",
-    "cross-env": "^7.0.3",
     "eslint": "^8.42.0",
     "eslint-plugin-tsdoc": "^0.2.17",
-    "nodemon": "^2.0.22",
-    "tailwindcss-bg-patterns": "^0.2.0",
-    "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.2.0"
+    "tailwindcss-bg-patterns": "^0.2.0"
   }
 }
