--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,18 +1,21 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
-    "outDir": "dist",
-    "lib": ["esnext"],
-    "target": "es2019",
-    "baseUrl": "src/server",
+    "target": "esnext",
+    "module": "esnext",
+    "strict": true,
+    "strictNullChecks": true,
+    "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "isolatedModules": false,
-    "moduleResolution": "node",
-    "noEmit": false,
+    "outDir": "dist",
+    "baseUrl": "./",
     "paths": {
       "@server/*": ["./src/*"]
     }
   },
-  "include": ["src/server/**/*.ts"]
+  "include": [
+    "src"
+  ]
 }
