--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,8 @@
     "start": "npx cross-env NODE_ENV=production node --experimental-specifier-resolution=node dist/main.js",
     "dev": "npx tsx ./src/main",
     "dev:watch": "npx tsx watch ./src/main",
-    "build": "npx tsc -p tsconfig.json && npx tsc-alias -p tsconfig.json"
+    "build": "npx tsc -p tsconfig.json && npx tsc-alias -p tsconfig.json",
+    "lint": "npx eslint --fix src/**/*.ts"
   },
   "type": "module",
   "dependencies": {
@@ -60,6 +61,7 @@
     "@types/passport": "^1.0.12",
     "@types/passport-local": "^1.0.35",
     "@types/uuid": "^9.0.3",
+    "@typescript-eslint/eslint-plugin": "^6.6.0",
     "eslint": "^8.48.0",
     "eslint-plugin-tsdoc": "^0.2.17",
     "tsc-alias": "^1.8.7",
