add necessary dependencies for oauth, remove dotenv

--- a/server/package.json
+++ b/server/package.json
@@ -27,21 +27,24 @@
   },
   "type": "module",
   "dependencies": {
+    "@types/crypto-js": "^4.1.2",
     "body-parser": "^1.20.2",
     "config": "^3.3.9",
     "cookie-parser": "^1.4.6",
     "cross-env": "^7.0.3",
+    "crypto-js": "^4.1.1",
     "csrf-csrf": "^3.0.0",
     "dateformat": "^5.0.3",
-    "dotenv": "^16.3.1",
     "express": "github:expressjs/express#5.0",
     "express-mysql-session": "^3.0.0",
     "express-session": "^1.17.3",
     "http-errors": "^2.0.0",
     "method-override": "^3.0.0",
     "mysql2": "^3.6.0",
+    "node-fetch": "^3.3.2",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
+    "passport-oauth2": "^1.7.0",
     "sequelize": "^6.32.1",
     "sequelize-typescript": "^2.1.5",
     "unique-names-generator": "^4.7.1",
@@ -60,6 +63,7 @@
     "@types/node": "^20.5.9",
     "@types/passport": "^1.0.12",
     "@types/passport-local": "^1.0.35",
+    "@types/passport-oauth2": "^1.4.12",
     "@types/uuid": "^9.0.3",
     "@typescript-eslint/eslint-plugin": "^6.6.0",
     "eslint": "^8.48.0",
