--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,7 @@
     "body-parser": "^1.20.2",
     "config": "^3.3.9",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "crypto-js": "^4.1.1",
     "csrf-csrf": "^3.0.0",
@@ -54,6 +55,7 @@
   "devDependencies": {
     "@types/config": "^3.3.1",
     "@types/cookie-parser": "^1.4.4",
+    "@types/cors": "^2.8.14",
     "@types/dateformat": "^5.0.0",
     "@types/express": "^4.17.17",
     "@types/express-mysql-session": "^3.0.0",
