--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,7 @@
     "url": "https://github.com/ducompsoc/durhack-megateams"
   },
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3100",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
