install passport-oauth2-refresh (for future use, in case access tokens need to be refreshed)

--- a/server/package.json
+++ b/server/package.json
@@ -46,6 +46,7 @@
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "passport-oauth2": "^1.7.0",
+    "passport-oauth2-refresh": "^2.2.0",
     "sequelize": "^6.32.1",
     "sequelize-typescript": "^2.1.5",
     "unique-names-generator": "^4.7.1",
@@ -66,6 +67,7 @@
     "@types/passport": "^1.0.12",
     "@types/passport-local": "^1.0.35",
     "@types/passport-oauth2": "^1.4.12",
+    "@types/passport-oauth2-refresh": "^1.1.1",
     "@types/uuid": "^9.0.3",
     "@typescript-eslint/eslint-plugin": "^6.6.0",
     "eslint": "^8.48.0",
