--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,7 @@
   },
   "contributors": [
     "Joe Clack <durhack@joeclack.me.uk>",
-    "Jacob Wrenn <jacob.w@durhack.com>",
+    "Jacob Wrenn <jacob@wrenn.me>",
     "Amber G <amber.g@durhack.com>",
     "Luca Huelle <lucahuelle@gmail.com>"
   ],
