--- a/client/package.json
+++ b/client/package.json
@@ -45,6 +45,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-component-export-image": "^1.0.6",
     "react-dom": "18.2.0",
+    "react-hooks-use-form-state": "^0.0.1",
     "react-qr-code": "^2.0.11",
     "react-responsive": "^9.0.2",
     "react-select": "^5.7.4",
