--- a/client/package.json
+++ b/client/package.json
@@ -46,6 +46,7 @@
     "react-component-export-image": "^1.0.6",
     "react-dom": "18.2.0",
     "react-hooks-use-form-state": "^0.0.1",
+    "react-paginate": "^8.2.0",
     "react-qr-code": "^2.0.11",
     "react-responsive": "^9.0.2",
     "react-select": "^5.7.4",
