--- a/server/package.json
+++ b/server/package.json
@@ -17,13 +17,19 @@
   "repository": {
     "url": "https://github.com/ducompsoc/durhack-megateams"
   },
-  "main": "dist/main.js",
   "scripts": {
-    "start": "npx cross-env NODE_ENV=production node --experimental-specifier-resolution=node dist/main.js",
-    "dev": "npx tsx ./src/main",
-    "dev:watch": "npx tsx watch ./src/main",
-    "build": "npx tsc -p tsconfig.json && npx tsc-alias -p tsconfig.json",
-    "lint": "npx eslint --fix src/**/*.ts"
+    "start": "npx cross-env NODE_ENV=production node --import extensionless/register ./dist/index.js",
+    "dev": "tsx ./src/main",
+    "dev:watch": "tsx watch ./src/main",
+    "compile": "npx tsc -p tsconfig.json && npx tsc-alias -p tsconfig.json",
+    "compile:watch": "npm run compile -- --watch",
+    "lint": "npx eslint . -c ./.eslintrc.yml",
+    "build": "npm run format:write && npm run package",
+    "ci-test": "jest --passWithNoTests",
+    "format:write": "prettier --write './**/*.ts'",
+    "format:check": "prettier --check './**/*.ts'",
+    "test": "jest",
+    "all": "npm run format:write && npm run lint && npm run test && npm run package"
   },
   "type": "module",
   "dependencies": {
@@ -71,8 +77,18 @@
     "@types/uuid": "^9.0.3",
     "@typescript-eslint/eslint-plugin": "^6.6.0",
     "eslint": "^8.48.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-github": "^4.10.1",
+    "eslint-plugin-jest": "^27.6.3",
+    "eslint-plugin-jsonc": "^2.13.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-tsdoc": "^0.2.17",
-    "tsc-alias": "^1.8.7",
+    "extensionless": "^1.9.6",
+    "jest": "^29.7.0",
+    "prettier": "^3.2.4",
+    "prettier-eslint": "^16.3.0",
+    "ts-jest": "^29.1.2",
+    "tsc-alias": "^1.8.8",
     "tsx": "^3.12.8",
     "typescript": "^5.1.6"
   }
