--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,7 @@
     "url": "https://github.com/ducompsoc/durhack-megateams"
   },
   "scripts": {
-    "start": "npx cross-env NODE_ENV=production node --import extensionless/register ./dist/index.js",
+    "start": "npx cross-env NODE_ENV=production node --import extensionless/register ./dist/main.js",
     "dev": "tsx ./src/main",
     "dev:watch": "tsx watch ./src/main",
     "compile": "npx tsc -p tsconfig.json && npx tsc-alias -p tsconfig.json",
