--- a/server/package.json
+++ b/server/package.json
@@ -34,7 +34,7 @@
   "type": "module",
   "dependencies": {
     "@types/crypto-js": "^4.1.2",
-    "body-parser": "^1.20.2",
+    "body-parser": "github:expressjs/body-parser#2.x",
     "config": "^3.3.9",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
