--- a/client/package.json
+++ b/client/package.json
@@ -38,8 +38,8 @@
     "chartjs-plugin-datalabels": "^2.2.0",
     "dateformat": "^5.0.3",
     "eslint-config-next": "13.4.5",
-    "next": "13.4.5",
-    "postcss": "8.4.24",
+    "next": "^14.2.5",
+    "postcss": "^8.4.41",
     "qrcode-scanner-react": "^0.2.3",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
@@ -52,6 +52,7 @@
     "react-select": "^5.7.4",
     "reflect-metadata": "^0.1.13",
     "sass": "^1.63.4",
+    "socket.io-client": "^4.7.5",
     "swr": "^2.2.2",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
@@ -61,6 +62,6 @@
     "@html-eslint/parser": "^0.19.0",
     "eslint": "^8.42.0",
     "eslint-plugin-tsdoc": "^0.2.17",
-    "tailwindcss-bg-patterns": "^0.2.0"
+    "tailwindcss-bg-patterns": "^0.3.0"
   }
 }
