--- a/server/package.json
+++ b/server/package.json
@@ -90,6 +90,7 @@
     "jest": "^29.7.0",
     "prettier": "^3.2.4",
     "prettier-eslint": "^16.3.0",
+    "prisma": "^5.18.0",
     "ts-jest": "^29.1.2",
     "tsc-alias": "^1.8.8",
     "tsx": "^3.12.8",
