migrating the database to Prisma

--- a/server/package.json
+++ b/server/package.json
@@ -36,6 +36,7 @@
   },
   "type": "module",
   "dependencies": {
+    "@prisma/client": "^5.18.0",
     "@types/crypto-js": "^4.1.2",
     "body-parser": "github:expressjs/body-parser#2.x",
     "config": "^3.3.9",
