--- a/server/package.json
+++ b/server/package.json
@@ -26,11 +26,10 @@
     "dev": "tsx ./src/main",
     "dev:watch": "tsx watch ./src/main",
     "compile": "npx tsc -p tsconfig.json && npx tsc-alias -p tsconfig.json",
-    "lint": "npx eslint . -c ./.eslintrc.yml",
+    "check": "biome check .",
+    "check:fix": "biome check --write .",
     "build": "npm run format:write && npm run compile",
     "ci-test": "jest --passWithNoTests",
-    "format:write": "prettier --write './**/*.ts'",
-    "format:check": "prettier --check './**/*.ts'",
     "test": "jest",
     "all": "npm run format:write && npm run lint && npm run test && npm run compile"
   },
@@ -66,6 +65,7 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
+    "@biomejs/biome": "^1.8.3",
     "@types/config": "^3.3.1",
     "@types/cookie-parser": "^1.4.4",
     "@types/cors": "^2.8.14",
@@ -81,18 +81,8 @@
     "@types/passport-oauth2": "^1.4.12",
     "@types/passport-oauth2-refresh": "^1.1.1",
     "@types/uuid": "^9.0.3",
-    "@typescript-eslint/eslint-plugin": "^6.6.0",
-    "eslint": "^8.48.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-github": "^4.10.1",
-    "eslint-plugin-jest": "^27.6.3",
-    "eslint-plugin-jsonc": "^2.13.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-tsdoc": "^0.2.17",
     "extensionless": "^1.9.6",
     "jest": "^29.7.0",
-    "prettier": "^3.2.4",
-    "prettier-eslint": "^16.3.0",
     "prisma": "^5.18.0",
     "ts-jest": "^29.1.2",
     "tsc-alias": "^1.8.8",
