--- a/server/package.json
+++ b/server/package.json
@@ -88,5 +88,6 @@
     "tsc-alias": "^1.8.8",
     "tsx": "^3.12.8",
     "typescript": "^5.1.6"
-  }
+  },
+  "packageManager": "pnpm@9.9.0+sha256.7a4261e50d9a44d9240baf6c9d6e10089dcf0a79d0007f2a26985a6927324177"
 }
