--- a/server/package.json
+++ b/server/package.json
@@ -38,7 +38,6 @@
     "@durhack/token-vault": "^0.1.2",
     "@prisma/client": "^5.18.0",
     "body-parser": "github:expressjs/body-parser#2.x",
-    "config": "^3.3.9",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
@@ -60,11 +59,11 @@
     "socket.io": "^4.7.5",
     "unique-names-generator": "^4.7.1",
     "uuid": "^9.0.0",
-    "zod": "^3.22.2"
+    "zod": "^3.22.2",
+    "zod-config": "^0.0.5"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.8.3",
-    "@types/config": "^3.3.1",
     "@types/cookie-parser": "^1.4.4",
     "@types/cors": "^2.8.14",
     "@types/dateformat": "^5.0.0",
