--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,7 @@
     "node": ">=20"
   },
   "scripts": {
-    "start": "npx cross-env NODE_ENV=production node --import extensionless/register ./dist/main.js",
+    "start": "npx cross-env NODE_ENV=production node ./dist/main.js",
     "dev": "tsx ./src/main",
     "dev:watch": "tsx watch ./src/main",
     "compile": "npx tsc -p tsconfig.json && npx tsc-alias -p tsconfig.json",
