prefer otterhttp to express

--- a/server/package.json
+++ b/server/package.json
@@ -36,24 +36,19 @@
   "type": "module",
   "dependencies": {
     "@durhack/token-vault": "^0.1.2",
+    "@otterhttp/app": "^3.4.4",
+    "@otterhttp/cookie-signature": "^3.0.0",
+    "@otterhttp/csrf-csrf": "^3.3.0",
+    "@otterhttp/errors": "^0.2.1",
+    "@otterhttp/parsec": "^0.1.2",
+    "@otterhttp/session": "^0.3.0",
     "@prisma/client": "^5.19.0",
-    "body-parser": "github:expressjs/body-parser#2.x",
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
+    "corstisol": "^1.0.0",
     "cross-env": "^7.0.3",
-    "csrf-csrf": "^3.0.0",
     "dateformat": "^5.0.3",
-    "express": "github:expressjs/express#5.0",
-    "express-mysql-session": "^3.0.0",
-    "express-session": "^1.17.3",
-    "http-errors": "^2.0.0",
-    "method-override": "^3.0.0",
     "mysql2": "^3.6.0",
     "node-fetch": "^3.3.2",
-    "passport": "^0.6.0",
-    "passport-local": "^1.0.0",
-    "passport-oauth2": "^1.7.0",
-    "passport-oauth2-refresh": "^2.2.0",
+    "openid-client": "^5.6.5",
     "socket.io": "^4.7.5",
     "unique-names-generator": "^4.7.1",
     "uuid": "^9.0.0",
@@ -62,19 +57,8 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^1.8.3",
-    "@types/cookie-parser": "^1.4.4",
-    "@types/cors": "^2.8.14",
     "@types/dateformat": "^5.0.0",
-    "@types/express": "^4.17.17",
-    "@types/express-mysql-session": "^3.0.0",
-    "@types/express-session": "^1.17.7",
-    "@types/http-errors": "^2.0.1",
-    "@types/method-override": "^0.0.32",
     "@types/node": "^20.5.9",
-    "@types/passport": "^1.0.12",
-    "@types/passport-local": "^1.0.35",
-    "@types/passport-oauth2": "^1.4.12",
-    "@types/passport-oauth2-refresh": "^1.1.1",
     "@types/uuid": "^9.0.3",
     "prisma": "^5.19.0",
     "tsx": "^4.19.0",
