chore(deps): add `@keycloak/keycloak-admin-client`

--- a/server/package.json
+++ b/server/package.json
@@ -36,6 +36,7 @@
   "type": "module",
   "dependencies": {
     "@durhack/token-vault": "^0.1.2",
+    "@keycloak/keycloak-admin-client": "^25.0.4",
     "@otterhttp/app": "^3.4.4",
     "@otterhttp/cookie-signature": "^3.0.0",
     "@otterhttp/csrf-csrf": "^3.3.0",
